# bookreader

./: .gitignore  AGENTS.md  AGENT_HANDOFF.md  test_sample.txt  tmp_epub_innerhtml_test.html
backend/: annotations.json  bookreader-backend.spec  build_sidecar.ps1  library.json  main.py  models.py  paths.py  recreate_venv.ps1  requirements-dev.txt  requirements.txt  run_server.py
backend/routers/: annotations.py  books.py  fonts.py  library_folders.py
backend/services/: annotation_store.py  epub_service.py  library_store.py  search_service.py  txt_service.py  txt_transform_service.py
backend/tests/: test_books_txt_manifest_api.py  test_books_upload_api.py  test_build_readiness.py  test_library_store_upload_dedup.py  test_paths.py  test_search_service.py  test_txt_service.py  test_txt_transform_service.py
docs/: build-desktop.md  performance-size-plan.md  qa-validation.md  txt-reader-regression-guardrails.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js  vitest.config.js
frontend/scripts/: collect-build-metrics.ps1  tauri-cli.cjs  tauri-wrapper.cjs
frontend/src/: App.jsx  i18n.js  i18n.test.js  main.jsx  styles.css
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: lib.rs  main.rs
legacy/backend_legacy/: bookreader-backend.spec  build_sidecar.ps1  main.py  models.py  run_server.py
legacy/frontend_legacy/: TAURI_TARGET_NOTE.md  index.html  package-lock.json  package.json  (+2 more)
tasks/: lessons.md  todo.md
(+94 files in other folders)
