[package]
name = "bookreader_desktop"
version = "0.1.1"
description = "BookReader desktop shell"
authors = ["bookreader"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "bookreader_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
log = "0.4"
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
